--- a/fiindmyspace/.env
+++ b/fiindmyspace/.env
@@ -1,1 +1,3 @@
 VITE_API_URL=http://localhost:5000
+VITE_GOOGLE_CLIENT_ID=196121903556-s62ap8rtv8961otohu86odldclpt79i2.apps.googleusercontent.com
+
