--- a/fiindmyspace/.env.production
+++ b/fiindmyspace/.env.production
@@ -1,1 +1,2 @@
 VITE_API_URL=https://findmyspace-api.onrender.com
+VITE_GOOGLE_CLIENT_ID=196121903556-s62ap8rtv8961otohu86odldclpt79i2.apps.googleusercontent.com
