--- a/fiindmyspace/package.json
+++ b/fiindmyspace/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^3.0.1",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.7.0"
